--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,12 +10,12 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="button_start">Iniciar</string>
     <string name="button_stop">Detener</string>
-    <string name="button_newtrack">Nuevo registro</string>
+    <string name="button_newtrack">Nueva ruta</string>
     <string name="button_upload">Subir</string>
     <string name="is_running" comment="substituted app_name">%s está en ejecución</string>
-    <string name="title_newtrack">Nuevo registro</string>
-    <string name="label_track">Registro actual</string>
-    <string name="label_newtrack_name">Nombre del nuevo registro</string>
+    <string name="title_newtrack">Nueva ruta</string>
+    <string name="label_track">Ruta actual</string>
+    <string name="label_newtrack_name">Nombre de la nueva ruta</string>
     <string name="label_name">Nombre</string>
     <string name="label_last_update">Última actualización: %s</string>
     <string name="label_synchronized">Sincronizado</string>
@@ -39,13 +39,17 @@
     <string name="pref_livesync_summary">Subida continua de posiciones al servidor. Requiere un usuario, contraseña y url de servidor válidos.</string>
     <string name="pref_autostart_title">Inicio automático</string>
     <string name="pref_autostart_summary">La aplicación se iniciará al arrancar el sistema</string>
+    <string name="pref_external_title">Permitir comandos externos</string>
+    <string name="pref_external_summary">Permite recibir comandos de otras aplicaciones para facilitar la automatización y la programación de tareas.</string>
     <string name="pref_provider_title">Proveedor de ubicación</string>
     <string name="pref_provider_summary">La ubicación puede ser proporcionada por el proveedor de gps, de la red o por ambos. Usar ambos proveedores proporcionará los mejores resultados, pero un mayor consumo de batería.</string>
     <string name="pref_units_title">Unidades</string>
-    <string name="pref_units_summary">Tipo de unidad preferido para mostrar el resumen de los registros</string>
+    <string name="pref_units_summary">Tipo de unidad preferido para mostrar el resumen de la ruta</string>
     <string name="pref_units_metric">Métricas</string>
     <string name="pref_units_imperial">Imperiales</string>
     <string name="pref_units_nautical">Náuticas</string>
+    <string name="pref_auto_name_title">Plantilla del nombre de ruta</string>
+    <string name="pref_auto_name_summary" formatted="false">Plantilla del nombre de la nueva ruta. Los siguientes patrones serán sustituidos con elementos de fecha actuales: %y (año), %m (mes), %d (día), %H (hora), %M (minuto), %S (segundo). Si necesita un carácter de porcentaje literal, use %%.</string>
     <string name="label_status">Estado</string>
     <string name="label_location">Ubicación</string>
     <string name="label_synchronization">Sincronización</string>
@@ -53,10 +57,11 @@
     <string name="tracking_started">Registro iniciado</string>
     <string name="uploading_started">Subida iniciada</string>
     <string name="nothing_to_synchronize">Nada para sincronizar</string>
-    <string name="no_positions">El registro actual no tiene posiciones</string>
+    <string name="no_positions">La ruta actual no tiene posiciones</string>
     <string name="warning">Alerta</string>
-    <string name="notsync_warning">El registro actual contiene posiciones no sincronizadas. Crear un nuevo registro eliminará todos estos datos.</string>
-    <string name="no_track_warning">Por favor, configura un nuevo registro primero</string>
+    <string name="notsync_warning">La ruta actual contiene posiciones no sincronizadas. Crear una nueva ruta eliminará todos estos datos.</string>
+    <string name="no_track_warning">Por favor, configura una nueva ruta primero</string>
+    <string name="empty_trackname_warning">El nombre de la ruta no puede estar vacío</string>
     <string name="logger_running_warning">Por favor, para el registro actual primero</string>
     <string name="about">Acerca de</string>
     <string name="about_description">Aplicación de registro de ubicaciones sencilla, con soporte para registro continuo y subida de posiciones a tu propio <xliff:g id="server_link_open"><![CDATA[<a href="https://github.com/bfabiszewski/ulogger-server">]]></xliff:g>servidor μlogger<xliff:g id="server_link_close"><![CDATA[</a>]]></xliff:g>.</string>
@@ -65,7 +70,7 @@
     <string name="about_license">Licencia: GPL</string>
     <string name="uploading_failed">La subida a fallado:</string>
     <string name="uploading_done">Subida completada</string>
-    <string name="track_summary">Resumen del registro</string>
+    <string name="track_summary">Resumen de la ruta</string>
     <string name="summary_distance" comment="1-distance, 2-unit name">%1$s %2$s</string>
     <plurals name="summary_positions">
         <item quantity="one">%d posición</item>
@@ -76,6 +81,7 @@
     <string name="unit_mile">mi.</string>
     <string name="provide_valid_url">Por favor, indica una url de servidor válida</string>
     <string name="provide_user_pass_url">Por favor, indica primero el usuario, contraseña y url del servidor</string>
+    <string name="e_illegal_state">Excepción de estado ilegal: %s</string>
     <string name="e_illegal_redirect">Redirección ilegal: %d</string>
     <string name="e_auth_failure">Fallo de autenticación: %d</string>
     <string name="e_http_code">Código de error HTTP: %d</string>
@@ -91,15 +97,15 @@
     <string name="using_gps">Utilizando proveedor gps</string>
     <string name="export">Exportar a GPX</string>
     <string name="nothing_to_export">No hay nada que exportar</string>
-    <string name="export_done">El registro se ha guardado correctamente en la carpeta de descargas</string>
+    <string name="export_done">La ruta se ha guardado correctamente</string>
     <string name="export_failed">Ha fallado la exportación</string>
-    <string name="unknown_track">Registro desconocido</string>
+    <string name="unknown_track">Ruta desconocida</string>
     <string name="export_started">Exportación iniciada</string>
     <plurals name="label_positions_behind">
         <item quantity="one">%d posición pendiente</item>
         <item quantity="other">%d posiciones pendiente</item>
     </plurals>
-    <string name="track_server_setup_warning">Si cambias la configuración del servidor no será posible sincronizar el registro en curso.</string>
+    <string name="track_server_setup_warning">Si cambias la configuración del servidor no será posible sincronizar la ruta en curso.</string>
     <string name="pref_mintime_other">Mínimo intervalo de tiempo en segundos</string>
     <string name="pref_mindistance_other">Mínima distancia en metros</string>
     <string name="pref_minaccuracy_other">Mínima precisión en metros</string>
@@ -107,4 +113,7 @@
     <string name="pref_cat_location">Seguimento de ubicación</string>
     <string name="pref_cat_server">Servidor</string>
     <string name="pref_cat_other">Otros</string>
+    <string name="illegal_template_warning">La plantilla contiene caracteres ilegales</string>
+    <string name="cannot_open_picker">No se puede abrir el selector de archivos</string>
+    <string name="e_open_out_stream">No se pudo abrir la secuencia de salida</string>
 </resources>
