--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -91,7 +91,7 @@
     <string name="using_gps">Utilisant le GPS</string>
     <string name="export">Exporter en GPX</string>
     <string name="nothing_to_export">Rien à exporter</string>
-    <string name="export_done">Piste sauvegardée avec succès dans le dossier de téléchargement</string>
+    <string name="export_done">Piste sauvegardée avec succès</string>
     <string name="export_failed">Export échoué</string>
     <string name="unknown_track">Piste inconnue</string>
     <string name="export_started">Export débuté</string>
@@ -107,4 +107,4 @@
     <string name="pref_cat_location">Suivi de localisation</string>
     <string name="pref_cat_server">Serveur</string>
     <string name="pref_cat_other">Autres</string>
-</resources>
+    </resources>
