Fix translation typo

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -63,7 +63,7 @@
     <string name="no_track_warning">Nejprve nastavte novou trasu</string>
     <string name="empty_trackname_warning">Název trasy nemůže být prázdný</string>
     <string name="logger_running_warning">Nejdříve zastavte aktuální sledování</string>
-    <string name="about">O nás...</string>
+    <string name="about">O nás…</string>
     <string name="about_description">Jednoduchý záznamník polohy s podporou živého sledování a nahrávání pozic do vlastních stránek <xliff:g id="server_link_open"><![CDATA[<a href=\"https://github.com/bfabiszewski/ulogger-server\">]]></xliff:g>μlogger server<xliff:g id="server_link_close"><![CDATA[</a>]]></xliff:g>.</string>
     <string name="about_description2">Další informace a nápovědu naleznete na domovské stránce <xliff:g id="app_link_open"><![CDATA[ <a href=\"https://github.com/bfabiszewski/ulogger-android\">]]></xliff:g> μlogger <xliff:g id="app_link_close"><![CDATA[</a>]]></xliff:g>.</string>
     <string name="about_version">Verze %s</string>
