--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,7 +111,7 @@
     <string name="using_network">Using network provider</string>
     <string name="using_gps">Using gps provider</string>
     <string name="export">Export to GPX</string>
-    <string name="waypoint">Add waypoint</string>
+    <string name="waypoint">Waypoint</string>
     <string name="nothing_to_export">Nothing to export</string>
     <string name="export_done">Track successfully saved</string>
     <string name="export_failed">Export failed</string>
@@ -137,7 +137,7 @@
     <string name="provider_network">Network</string>
     <string name="provider_gps_network">Network and GPS</string>
     <string name="logger_task_failure">Couldn\'t get location</string>
-    <string name="take_photo">Take Photo</string>
+    <string name="take_photo">Take photo</string>
     <string name="from_library">Choose from Library</string>
     <string name="accuracy_meters">%d m accuracy</string>
     <string name="meters_asl">%s m a.s.l.</string>
@@ -145,4 +145,5 @@
     <string name="label_waypoint_description">Waypoint description</string>
     <string name="label_add_photo">Add photo</string>
     <string name="button_save">Save</string>
+    <string name="tracking">Tracking</string>
 </resources>
