--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -75,6 +75,7 @@
     <plurals name="summary_positions">
         <item quantity="one">%d pozice</item>
         <item quantity="few">%d pozic</item>
+        <item quantity="many">%d pozic</item>
         <item quantity="other">%d pozic</item>
     </plurals>
     <string name="summary_duration">%1$d h %2$d min</string>
@@ -105,6 +106,7 @@
     <plurals name="label_positions_behind">
         <item quantity="one">%d pozice zbývá</item>
         <item quantity="few">%d pozice zbývají</item>
+        <item quantity="many">%d pozic zbývá</item>
         <item quantity="other">%d pozic zbývá</item>
     </plurals>
     <string name="track_server_setup_warning">Pokud změníte nastavení serveru, nemusí být možné synchronizovat aktuální trasu.</string>
@@ -118,4 +120,7 @@
     <string name="illegal_template_warning">Šablona obsahuje nepovolené znaky</string>
     <string name="cannot_open_picker">Nelze otevřít nástroj pro výběr souborů</string>
     <string name="e_open_out_stream">Nepodařilo se otevřít výstupní stream</string>
-</resources>
+    <string name="provider_gps">GPS</string>
+    <string name="provider_network">Síť</string>
+    <string name="provider_gps_network">Síť a GPS</string>
+    </resources>
