--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -35,6 +35,8 @@
     <string name="pref_mindistance_summary">Mindeste Entfernung zwischen Positionen</string>
     <string name="pref_minaccuracy_title">Mindeste Genauigkeit</string>
     <string name="pref_minaccuracy_summary">Mindeste Genauigkeit zwischen Positionen</string>
+    <string name="pref_imagesize_title">Bildgröße</string>
+    <string name="pref_imagesize_summary">Maximale Breite/Höhe des hochgeladenen Bildes in Pixeln. Ein evtl verkeinertes Bild wird vorübergehend im App-Ordner gespeichert. Wenn du \"tatsächliche Größe\" wählst, wird keine Kopie angelegt und die Originaldatei muss während des Uploads verfügbar sein.</string>
     <string name="pref_livesync_title">Live-Synchronisation</string>
     <string name="pref_livesync_summary">Live-Synchronisation mit Server. Gültiger Server/Benutzername/Passwort erforderlich.</string>
     <string name="pref_autostart_title">Autostart</string>
@@ -96,6 +98,7 @@
     <string name="using_network">Verwende Netzwerk-Provider als Positionsquelle</string>
     <string name="using_gps">Verwende GPS als Positionsquelle</string>
     <string name="export">Als GPX exportieren</string>
+    <string name="waypoint">Wegpunkt</string>
     <string name="nothing_to_export">Keine Daten zu exportieren</string>
     <string name="export_done">Track erfolgreich gespeichert</string>
     <string name="export_failed">Export fehlgeschlagen</string>
@@ -109,6 +112,7 @@
     <string name="pref_mintime_other">Mindester Zeitabstand in Sekunden</string>
     <string name="pref_mindistance_other">Mindestentfernung in Metern</string>
     <string name="pref_minaccuracy_other">Mindestgenauigkeit in Metern</string>
+    <string name="pref_imagesize_other">Maximale Bildbreite/-höhe in Pixeln</string>
     <string name="unit_nmile">sm</string>
     <string name="pref_cat_location">Positionsverfolgung</string>
     <string name="pref_cat_server">Server</string>
@@ -119,4 +123,13 @@
     <string name="provider_gps">GPS</string>
     <string name="provider_network">Netzwerk</string>
     <string name="provider_gps_network">Netzwerk und GPS</string>
+    <string name="logger_task_failure">Position konnte nicht ermittelt werden.</string>
+    <string name="take_photo">Foto aufnehmen</string>
+    <string name="from_library">Aus Sammlung wählen</string>
+    <string name="accuracy_meters">%d m Genauigkeit</string>
+    <string name="meters_asl">%s m ü. NN</string>
+    <string name="label_position">Position</string>
+    <string name="label_waypoint_description">Beschreibung des Wegpunktes</string>
+    <string name="label_add_photo">Foto hinzufügen</string>
+    <string name="button_save">Speichern</string>
     </resources>
